--- a/bbcProject/WebContent/resources/css/sb-admin-2.css
+++ b/bbcProject/WebContent/resources/css/sb-admin-2.css
@@ -375,7 +375,7 @@ textarea {
   cursor: default;
 }
 
-#info-client-hr{
+#info-client-hr, #car-hr{
   border: 1px solid rgba(0, 0, 0, 0.1);
   margin-bottom: 2rem;
   margin-left: 60px;
