민진 보유차량 수정
myCar.jsp 수정 중 커밋

--- a/bbcProject/WebContent/resources/css/sb-admin-2.css
+++ b/bbcProject/WebContent/resources/css/sb-admin-2.css
@@ -121,8 +121,9 @@ textarea {
   }
 }
 
-#car-modal-content{
-  height: 30rem;
+table.car-exp-table {
+  border-collapse: separate;
+  border-spacing: 10px;
 }
 
 #car-modal-dialog {
