--- a/bbcProject/WebContent/resources/css/sb-admin-2.css
+++ b/bbcProject/WebContent/resources/css/sb-admin-2.css
@@ -288,13 +288,16 @@ table.car-exp-table {
   color: red;
 }
 .tb_col {
-  margin-left: 4rem;
-  margin-bottom: 3rem;
+  margin-left: 60px;
+  margin-bottom: 60px;
   margin-top: 70px;
   width: 70%;
-  border: 1px solid #0000003b;
-  border-left: none;
-  border-right: none;
+}
+
+.tab-content-divider {
+  margin-bottom: 3rem;
+  margin-left: 4rem;
+  width: 1100px;
 }
 
 .prev {
@@ -333,7 +336,8 @@ table.car-exp-table {
 .detail-cnt {
   color: black;
   text-align: left;
-  margin-left: 5rem;
+  margin-left: 70px;
+  margin-bottom: 300px;
 }
 
 .tit-name {
@@ -341,12 +345,6 @@ table.car-exp-table {
 }
 
 /* 메인 공지사항 탭 */
-#main-notice-body {
-  margin-top: 1.5rem;
-  height: 23.6rem;
-  border-top: transparent;
-}
-
 #nav-tab {
   margin-left: 0;
   border-bottom: none;
@@ -355,9 +353,9 @@ table.car-exp-table {
 }
 
 #nav-tabContent {
-  margin-left: 1.2rem;
-  margin-top: 2rem;
-  width: 65rem;
+  margin-left: 15px;
+  margin-top: 20px;
+  width: 1045px;
 }
 
 
@@ -460,7 +458,7 @@ table.car-exp-table {
   color: white !important;
   background-color: orange !important;
   text-align: left !important;
-  margin-left: -30rem !important;
+  margin-left: -368px !important;
   cursor: pointer !important;
 }
 
@@ -4480,8 +4478,7 @@ input[type="button"].btn-block {
   padding-left: 0;
   list-style: none;
   border-radius: 0.35rem;
-  margin-left: 24rem;
-  margin-bottom: 5rem;
+  margin-left: 450px;
 }
 
 
