--- a/bbcProject/WebContent/resources/css/sb-admin-2.css
+++ b/bbcProject/WebContent/resources/css/sb-admin-2.css
@@ -687,6 +687,9 @@ figure {
 img {
   vertical-align: middle;
   border-style: none;
+  margin-bottom: 10px;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 svg {
