민진 반납처리 상세조회 기능
회원정보 대여정보 결제정보 보여주기 완성

--- a/bbcProject/WebContent/resources/css/sb-admin-2.css
+++ b/bbcProject/WebContent/resources/css/sb-admin-2.css
@@ -382,6 +382,12 @@ table.car-exp-table {
   width: 1105px;
 }
 
+#return-hr{
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  margin-bottom: 2rem;
+  width: 1105px;
+}
+
 #info-client {
   color: rgb(64,64,64);
   text-align: left;
