민기 - FAQ 기능테스트 완료 후 COMMIT
FAQ 오류 부분 수정

--- a/bbcProject/WebContent/resources/css/admin/sb-admin-2.css
+++ b/bbcProject/WebContent/resources/css/admin/sb-admin-2.css
@@ -2405,14 +2405,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #4e73df;
+  color: white !important;
+  background-color: orange;
   border-color: #4e73df;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #2e59d9;
+  background-color: orange;
   border-color: #2653d4;
 }
 
